<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <PreferenceCategory android:title="Server Configuration">
        
        <EditTextPreference
            android:key="server_url"
            android:title="@string/server_url"
            android:summary="@string/server_url_summary"
            android:defaultValue="@string/server_url_default"
            android:inputType="textUri" />
        
        <EditTextPreference
            android:key="budget_port"
            android:title="@string/budget_port"
            android:defaultValue="@string/budget_port_default"
            android:inputType="number" />
        
        <EditTextPreference
            android:key="health_port"
            android:title="@string/health_port"
            android:defaultValue="@string/health_port_default"
            android:inputType="number" />
    
    </PreferenceCategory>
    
    <PreferenceCategory android:title="Data">
        
        <Preference
            android:key="clear_cache"
            android:title="@string/clear_cache"
            android:summary="@string/clear_cache_summary" />
    
    </PreferenceCategory>

</PreferenceScreen>
